Loading the dataset

--- a/Head-pose-estimation-cnn.ipynb
+++ b/Head-pose-estimation-cnn.ipynb
@@ -66,6 +66,24 @@
     "# Open an embedded TensorBoard viewer\n",
     "%tensorboard --logdir {logdir}/models"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train=pd.read_csv(\"train_data.csv\", header=None)\n",
+    "\n",
+    "test=pd.read_csv(\"test_data.csv\", header=None)"
+   ]
   }
  ],
  "metadata": {
