--- a/Head-pose-estimation-cnn.ipynb
+++ b/Head-pose-estimation-cnn.ipynb
@@ -11,6 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Installling packages to access google drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the Drive helper and mount\n",
+    "from google.colab import drive\n",
+    "\n",
+    "# This will prompt for authorization.\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importing packages"
    ]
   },
@@ -109,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
